Aula 04, exercício não está finalizado

--- a/aula02/ex/index.html
+++ b/aula02/ex/index.html
@@ -25,7 +25,7 @@
         <hr>
         <footer>
             <a href="https://www.instagram.com/" target="_blank" rel="external">Instagram</a>      
-            <a href="https://estudante.sesisenai.org.br/login" target="_blank" rel="external">Fale conosco</a>
+            <a href="https://github.com/gabrielcmerlo" target="_blank" rel="external">Fale conosco</a>
         </footer>
     </div>
 </body>
